--- a/samples/preview/apps/colorapp/kubernetes/colorgateway.yaml
+++ b/samples/preview/apps/colorapp/kubernetes/colorgateway.yaml
@@ -38,10 +38,12 @@ spec:
             - name: "COLOR_TELLER_ENDPOINT"
               value: "colorteller.default.svc.cluster.local:9080"
         - name: envoy
-          image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-lattice-envoy:v1.8.0.X-beta
+          image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy
           securityContext:
             runAsUser: 1337
           env:
+            - name: "APPMESH_XDS_ENDPOINT"
+              value: "envoy-management.us-west-2.gamma.lattice.aws.a2z.com:443"
             - name: "APPMESH_VIRTUAL_NODE_NAME"
               value: "colorgateway"
             - name: "APPMESH_VIRTUAL_NODE_UID"
@@ -55,7 +57,7 @@ spec:
               value: "us-west-2"
       initContainers:
         - name: proxyinit
-          image: 989319603630.dkr.ecr.us-west-2.amazonaws.com/awslatticesidecarproxyroutemanager/awslatticesidecarproxyrouter:1.0.x.x
+          image: "111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-proxy-route-manager"
           securityContext:
             capabilities:
               add: 
