--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -4,6 +4,11 @@ Parameters:
     Type: String
     Description: Environment name that joins all the stacks
 
+  XdsEndpoint:
+    Type: String
+    Description: App Mesh resource (X) discovery XdsEndpoint
+    Default: "envoy-management.us-west-2.gamma.lattice.aws.a2z.com:443"
+
   SideCarRouterManagerImage:
     Type: String
     Description: Sidecar router manager that sets up networking for transparent proxy
@@ -18,7 +23,7 @@ Parameters:
     Type: String
     Default: debug 
 
-  ReportsImage:
+  VoteReportsImage:
     Type: String
     Description: Vote App Reports image
     Default: "subfuzion/vote-reports:1.0.12"
@@ -97,7 +102,7 @@ Resources:
     Properties:
       ContainerDefinitions:
         - Name: "app"
-          Image: { Ref: ReportsImage }
+          Image: { Ref: VoteReportsImage }
           Essential: true
           LogConfiguration:
             LogDriver: "awslogs"
@@ -136,6 +141,8 @@ Resources:
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: "reports-envoy"
           Environment:
+            - Name: "APPMESH_XDS_ENDPOINT"
+              Value: { Ref: XdsEndpoint }
             - Name: "APPMESH_VIRTUAL_NODE_NAME"
               Value: "reports-vn"
             - Name: "APPMESH_VIRTUAL_NODE_UID"
@@ -270,6 +277,8 @@ Resources:
               awslogs-region: { Ref: "AWS::Region" }
               awslogs-stream-prefix: "web-envoy"
           Environment:
+            - Name: "APPMESH_XDS_ENDPOINT"
+              Value: { Ref: XdsEndpoint }
             - Name: "APPMESH_VIRTUAL_NODE_NAME"
               Value: "web-vn"
             - Name: "APPMESH_VIRTUAL_NODE_UID"
@@ -278,6 +287,7 @@ Resources:
               Value: { Ref: EnvoyLogLevel }
             - Name: "AWS_REGION"
               Value: "us-west-2"
+      initContainers:
         - Name: "proxyinit"
           Image: { Ref: SideCarRouterManagerImage }
           Essential: false
