--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -166,6 +166,8 @@ Resources:
               Add:
                 - "NET_ADMIN"
           Environment:
+            - Name: "APPMESH_XDS_ENDPOINT"
+              Value: { Ref: XdsEndpoint }
             - Name: "APPMESH_START_ENABLED"
               Value: "1"
             - Name: "APPMESH_USE_TPROXY"
@@ -302,6 +304,8 @@ Resources:
               Add:
                 - "NET_ADMIN"
           Environment:
+            - Name: "APPMESH_XDS_ENDPOINT"
+              Value: { Ref: XdsEndpoint }
             - Name: "APPMESH_START_ENABLED"
               Value: "1"
             - Name: "APPMESH_USE_TPROXY"
