--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -146,7 +146,7 @@ Resources:
             - Name: "APPMESH_VIRTUAL_NODE_NAME"
               Value: "reports-vn"
             - Name: "APPMESH_VIRTUAL_NODE_UID"
-              Value: { Ref: VoteReportsNodeId }
+              Value: "mesh/bookinfo/virtualNode/reports-vn"
             - Name: "ENVOY_LOG_LEVEL"
               Value: { Ref: EnvoyLogLevel }
             - Name: "AWS_REGION"
@@ -284,7 +284,7 @@ Resources:
             - Name: "APPMESH_VIRTUAL_NODE_NAME"
               Value: "web-vn"
             - Name: "APPMESH_VIRTUAL_NODE_UID"
-              Value: { Ref: VoteWebNodeId }
+              Value: "mesh/bookinfo/virtualNode/web-vn"
             - Name: "ENVOY_LOG_LEVEL"
               Value: { Ref: EnvoyLogLevel }
             - Name: "AWS_REGION"
