--- a/samples/preview/infrastructure/ecs-cluster.yaml
+++ b/samples/preview/infrastructure/ecs-cluster.yaml
@@ -146,6 +146,18 @@ Resources:
             01_add_instance_to_cluster:
               command: !Sub echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
           files:
+            "/etc/envoy/xray-tracing.yaml":
+              mode: 000400
+              owner: root
+              owner: root
+              content: !Sub |
+                tracing:
+                  http:
+                    name: envoy.xray
+                    config:
+                      collector_cluster: xray
+                      collector_endpoint: "localhost:2000"
+
             "/etc/cfn/cfn-hup.conf":
               mode: 000400
               owner: root
