--- a/src/cw-agent/Dockerfile
+++ b/src/cw-agent/Dockerfile
@@ -8,4 +8,8 @@ RUN go get -d -v ./... && \
 
 FROM debian:stretch
 COPY --from=build /go/bin/envoy_cloudwatch_agent /usr/bin/envoy_cloudwatch_agent
+RUN apt-get update && \
+    env DEBIAN_FRONTEND=noninteractive apt-get -y install ca-certificates && \
+    useradd -r cwagent
+USER cwagent
 CMD ["/usr/bin/envoy_cloudwatch_agent"]
