--- a/samples/preview/apps/voteapp/src/reports/package.json
+++ b/samples/preview/apps/voteapp/src/reports/package.json
@@ -16,6 +16,8 @@
     "node": ">=v8.0.0"
   },
   "dependencies": {
+    "aws-xray-sdk-core": "git+http://git@github.com/awssandra/aws-xray-node-sdk-core-experimental",
+    "aws-xray-sdk-express": "git+http://git@github.com/awssandra/aws-xray-node-sdk-express-experimental",
     "axios": "^0.18.0",
     "body-parser": "~1.18.3",
     "debug": "~4.1.0",
