--- a/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
+++ b/samples/preview/apps/voteapp/ecs/ecs-voteapp.yaml
@@ -220,7 +220,7 @@ Resources:
   WebService:
     Type: 'AWS::ECS::Service'
     DependsOn:
-      - LoadBalancerRule
+      - WebLoadBalancerRule
       - PrometheusLoadBalancerRule
       - GrafanaLoadBalancerRule
     Properties:
@@ -377,42 +377,8 @@ Resources:
         'Fn::ImportValue': !Sub "${EnvironmentName}:TaskExecutionIamRoleArn"
       NetworkMode: "awsvpc"
       Memory: 256
-
-  # Load balancer for getting traffic to containers.
-  # A public facing load balancer, this is used for accepting traffic from the public
-  # internet and directing it to public facing microservices
-  WebPublicLoadBalancerSG:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Access to the public facing load balancer
-      VpcId:
-        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
-      SecurityGroupIngress:
-          # Allow access to ALB from anywhere on the internet
-          - CidrIp: 0.0.0.0/0
-            IpProtocol: -1
-  ECSInstancesSecurityGroupIngressFromPublicALB:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: Ingress from the public ALB
-      GroupId:
-        'Fn::ImportValue': !Sub "${EnvironmentName}:ECSInstancesSecurityGroup"
-      IpProtocol: -1
-      SourceSecurityGroupId: !Ref 'WebPublicLoadBalancerSG'
-
-  WebPublicLoadBalancer:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties:
-      Scheme: internet-facing
-      LoadBalancerAttributes:
-        - Key: idle_timeout.timeout_seconds
-          Value: '30'
-      Subnets:
-        # The load balancer is placed into the public subnets, so that traffic
-        # from the internet can reach the load balancer directly via the internet gateway
-        - 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet1"
-        - 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet2"
-      SecurityGroups: [!Ref 'WebPublicLoadBalancerSG']
+  
+  # Web load balancer resources
   WebTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -422,7 +388,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       TargetType: ip
-      Name: !Join ['-', [!Ref 'EnvironmentName', 'drop-1']]
+      Name: !Join ['-', [!Ref 'EnvironmentName', 'web']]
       Port: 80
       Protocol: HTTP
       UnhealthyThresholdCount: 2
@@ -431,6 +397,23 @@ Resources:
           Value: 30
       VpcId:
         'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
+  
+  ## Create a rule on the load balancer for routing traffic to the target group
+  ## Listener is created in infrastructure/ecs-cluster.yaml
+  WebLoadBalancerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref 'WebTargetGroup'
+          Type: 'forward'
+      Conditions:
+        - Field: path-pattern
+          Values: [!Ref 'Path']
+      ListenerArn: 
+        'Fn::ImportValue': !Sub "${EnvironmentName}:PublicListener"
+      Priority: 1
+
+  # Prometheus load balancer resources
   PrometheusTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -440,7 +423,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 10
       TargetType: ip
-      Name: !Join ['-', [!Ref 'EnvironmentName', 'prometheus-1']]
+      Name: !Sub "${EnvironmentName}-prometheus-1"
       Port: 9090
       Protocol: HTTP
       UnhealthyThresholdCount: 10
@@ -449,70 +432,19 @@ Resources:
           Value: 30
       VpcId:
         'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
-  GrafanaTargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckIntervalSeconds: 300
-      HealthCheckPath: /
-      HealthCheckProtocol: HTTP
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 10
-      TargetType: ip
-      Name: !Join ['-', [!Ref 'EnvironmentName', 'grafana-1']]
-      Port: 3000
-      Protocol: HTTP
-      UnhealthyThresholdCount: 10
-      TargetGroupAttributes:
-        - Key: deregistration_delay.timeout_seconds
-          Value: 30
-      VpcId:
-        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
-  WebLoadBalancerListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - WebPublicLoadBalancer
-    Properties:
-      DefaultActions:
-        - TargetGroupArn: !Ref 'WebTargetGroup'
-          Type: 'forward'
-      LoadBalancerArn: !Ref 'WebPublicLoadBalancer'
-      Port: 80
-      Protocol: HTTP
+    
   PrometheusLoadBalancerListener:
     Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - WebPublicLoadBalancer
     Properties:
       DefaultActions:
         - TargetGroupArn: !Ref 'PrometheusTargetGroup'
           Type: 'forward'
-      LoadBalancerArn: !Ref 'WebPublicLoadBalancer'
+      LoadBalancerArn: 
+        'Fn::ImportValue': !Sub "${EnvironmentName}:PublicLoadBalancer"
       Port: 9090
       Protocol: HTTP
-  GrafanaLoadBalancerListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - WebPublicLoadBalancer
-    Properties:
-      DefaultActions:
-        - TargetGroupArn: !Ref 'GrafanaTargetGroup'
-          Type: 'forward'
-      LoadBalancerArn: !Ref 'WebPublicLoadBalancer'
-      Port: 3000
-      Protocol: HTTP
 
-  # Create a rule on the load balancer for routing traffic to the target group
-  LoadBalancerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref 'WebTargetGroup'
-          Type: 'forward'
-      Conditions:
-        - Field: path-pattern
-          Values: [!Ref 'Path']
-      ListenerArn: !Ref 'WebLoadBalancerListener'
-      Priority: 1
+  ## Create a rule on the load balancer for routing traffic to the target group
   PrometheusLoadBalancerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -524,6 +456,39 @@ Resources:
           Values: [!Ref 'Path']
       ListenerArn: !Ref 'PrometheusLoadBalancerListener'
       Priority: 1
+
+  # Grafana load balancer resources
+  GrafanaTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 300
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 10
+      TargetType: ip
+      Name: !Sub "${EnvironmentName}-grafana-1"
+      Port: 3000
+      Protocol: HTTP
+      UnhealthyThresholdCount: 10
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 30
+      VpcId:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
+
+  GrafanaLoadBalancerListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - TargetGroupArn: !Ref 'GrafanaTargetGroup'
+          Type: 'forward'
+      LoadBalancerArn:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:PublicLoadBalancer"
+      Port: 3000
+      Protocol: HTTP
+  
+  ## Create a rule on the load balancer for routing traffic to the target group
   GrafanaLoadBalancerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -535,10 +500,3 @@ Resources:
           Values: [!Ref 'Path']
       ListenerArn: !Ref 'GrafanaLoadBalancerListener'
       Priority: 1
-
-Outputs:
-  ExternalUrl:
-    Description: The url of the external load balancer
-    Value: !Join ['', ['http://', !GetAtt 'WebPublicLoadBalancer.DNSName']]
-    Export:
-      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'ExternalUrl' ] ]
