--- a/samples/preview/infrastructure/ecs-cluster.yaml
+++ b/samples/preview/infrastructure/ecs-cluster.yaml
@@ -58,6 +58,13 @@ Resources:
         - CidrIp:
             'Fn::ImportValue': !Sub "${EnvironmentName}:VpcCIDR"
           IpProtocol: -1
+  ECSInstancesSecurityGroupIngressFromPublicALB:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Ingress from the public ALB
+      GroupId: !Ref 'ECSInstancesSecurityGroup'
+      IpProtocol: -1
+      SourceSecurityGroupId: !Ref 'PublicLoadBalancerSG'
 
   #Bastion host Security group
   BastionSecurityGroup:
@@ -393,6 +400,66 @@ Resources:
         'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
       Name: { Ref: ECSServicesDomain }
 
+  # Load balancers for getting traffic to containers.
+  # This sample template creates one load balancer:
+  #
+  # - One public load balancer, hosted in public subnets that is accessible
+  #   to the public, and is intended to route traffic to one or more public
+  #   facing services.
+
+  # A public facing load balancer, this is used for accepting traffic from the public
+  # internet and directing it to public facing microservices
+  PublicLoadBalancerSG:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Access to the public facing load balancer
+      VpcId:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
+      SecurityGroupIngress:
+          # Allow access to ALB from anywhere on the internet
+          - CidrIp: 0.0.0.0/0
+            IpProtocol: -1
+  PublicLoadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Scheme: internet-facing
+      LoadBalancerAttributes:
+        - Key: idle_timeout.timeout_seconds
+          Value: '30'
+      Subnets:
+        # The load balancer is placed into the public subnets, so that traffic
+        # from the internet can reach the load balancer directly via the internet gateway
+        - 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet1"
+        - 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet2"
+      SecurityGroups: [!Ref 'PublicLoadBalancerSG']
+  # A dummy target group is used to setup the ALB to just drop traffic
+  # initially, before any real service target groups have been added.
+  DummyTargetGroupPublic:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 6
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      Name: !Sub "${EnvironmentName}-drop-1"
+      Port: 80
+      Protocol: HTTP
+      UnhealthyThresholdCount: 2
+      VpcId:
+        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
+  PublicLoadBalancerListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    DependsOn:
+      - PublicLoadBalancer
+    Properties:
+      DefaultActions:
+        - TargetGroupArn: !Ref 'DummyTargetGroupPublic'
+          Type: 'forward'
+      LoadBalancerArn: !Ref 'PublicLoadBalancer'
+      Port: 80
+      Protocol: HTTP
+
 Outputs:
 
   Cluster:
@@ -400,7 +467,7 @@ Outputs:
     Value: !Ref ECSCluster
     Export:
       Name: !Sub "${EnvironmentName}:ECSCluster"
-  #Bastion Host IP
+
   BastionHostIP:
     Description: Bastion Host Ip address to SSH 
     Value: !GetAtt BastionHost.PublicIp
@@ -448,3 +515,22 @@ Outputs:
     Value: !Ref TaskIamRole
     Export:
       Name: !Sub "${EnvironmentName}:TaskIamRole"
+
+  #Load balancer
+  PublicLoadBalancer:
+    Description: The ARN of the public load balancer
+    Value: !Ref PublicLoadBalancer
+    Export:
+      Name: !Sub "${EnvironmentName}:PublicLoadBalancer"
+
+  PublicListener:
+    Description: The ARN of the public load balancer's Listener
+    Value: !Ref PublicLoadBalancerListener
+    Export:
+      Name: !Sub "${EnvironmentName}:PublicListener"
+
+  ExternalUrl:
+    Description: The url of the external load balancer
+    Value: !Join ['', ['http://', !GetAtt 'PublicLoadBalancer.DNSName']]
+    Export:
+      Name: !Sub "${EnvironmentName}:ExternalUrl"
